--- a/package.json
+++ b/package.json
@@ -3,11 +3,33 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build && vite build --ssr"
     },
     "devDependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.2.0",
+        "@fortawesome/free-brands-svg-icons": "^6.4.2",
+        "@fortawesome/free-regular-svg-icons": "^6.4.2",
+        "@fortawesome/free-solid-svg-icons": "^6.4.2",
+        "@vitejs/plugin-vue": "^4.2.3",
+        "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
-        "laravel-vite-plugin": "^0.7.5",
-        "vite": "^4.0.0"
+        "laravel-vite-plugin": "^0.7.8",
+        "postcss": "^8.4.27",
+        "tailwindcss": "^3.3.3",
+        "unplugin-auto-import": "^0.16.6",
+        "unplugin-vue-components": "^0.25.1",
+        "vite": "^4.4.9"
+    },
+    "dependencies": {
+        "@fortawesome/vue-fontawesome": "^3.0.3",
+        "element-plus": "^2.3.9",
+        "moment": "^2.29.4",
+        "pinia": "^2.0.0-rc.10",
+        "pinia-plugin-persist": "^1.0.0",
+        "typescript": "^5.1.6",
+        "vue": "^3.2.36",
+        "vue-i18n": "^9.2.2",
+        "vue-loader": "^17.0.1",
+        "vue-router": "^4.0.13"
     }
 }
