--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "moment": "^2.29.4",
         "pinia": "^2.0.0-rc.10",
         "pinia-plugin-persist": "^1.0.0",
+        "pinia-plugin-persistedstate": "^3.2.0",
         "typescript": "^5.1.6",
         "vue": "^3.2.36",
         "vue-i18n": "^9.2.2",
