--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.8",
         "postcss": "^8.4.27",
+        "sass": "^1.65.1",
         "tailwindcss": "^3.3.3",
         "unplugin-auto-import": "^0.16.6",
         "unplugin-vue-components": "^0.25.1",
